<resources>
    <string name="app_name">The Village Puppy</string>
    <string name="contacto">Contacto</string>
    <string name="acerca">Acerca de...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="mail">E-Mail</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar Comentario</string>
    <string name="encabezado">DATOS DE CONTACTO</string>
    <string name="star">Estrella</string>
</resources>