<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacto"
    android:background="@color/colorPrimaryLight">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miActionBar">

        <TextView
            android:id="@+id/tvEncabezado"
            android:height="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encabezado"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryLight"
            android:background="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimaryText"
            android:layout_margin="@dimen/margin_form"/>

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryText"
            android:layout_margin="@dimen/margin_form"/>

        <EditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/mensaje"
            android:inputType="textMultiLine"
            android:textColor="@color/colorPrimaryText"
            android:layout_margin="@dimen/margin_form"/>

        <Button
            android:id="@+id/btEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvAlert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>